# django_test

./: pyproject.toml
django_test/: db.sqlite3
django_test/articles/: forms.py  models.py  urls.py  views.py
django_test/articles/migrations/: 0001_initial.py  0002_alter_article_options_alter_article_modified.py
django_test/blog/: settings.py  urls.py
django_test/main/: urls.py  views.py
django_test/main/static/css/: base.css
django_test/main/templates/: base.html
django_test/main/templates/articles/: articles.html  create.html  delete.html  one_article.html  update.html
django_test/main/templates/main/: index.html
