[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["Kirill-Korzunov <kirillkorzunov@gmail.com>"]
readme = "README.md"
packages = [{include = "django_test"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
